added basic error feature when water is clicked and some refactoring that should probably be in its own commit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 @import './styles/normalize';
 @import './styles/components/point';
 @import './styles/components/call-out';
+@import './styles/components/error';
