--- a/src/styles/components/_error.scss
+++ b/src/styles/components/_error.scss
@@ -1,11 +1,11 @@
 .error{
-    position: fixed;
-    top: 300px;
-    width: 1000px;
+    position: absolute;
+    width: 95%;
+    top: 50%;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     text-align: center;
     background-color: rgba(159,58,56, 0.5);
     font-size: 20px;
