--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 @import './styles/normalize';
+@import './styles/components/map';
 @import './styles/components/point';
 @import './styles/components/call-out';
 @import './styles/components/error';
+@import './styles/components/header';
+@import './styles/components/footer';
