a few more mobile style adjustments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,4 @@
 @import './styles/components/error';
 @import './styles/components/header';
 @import './styles/components/footer';
+@import './styles/misc';
