switch to reading ISO_3166-1_alpha-2 as more countries have this avaible than ISO_3166-1_alpha-3

--- a/src/styles/components/_call-out.scss
+++ b/src/styles/components/_call-out.scss
@@ -64,13 +64,26 @@
 }
 
 @media all and (max-width: 1239px){
-    .bottom .callOut{
-        top: inherit;
-        bottom: -75px; 
-
-        &_triangle{
-            bottom: inherit;
-            top: -4px;
+    .bottom{
+        .callOut{
+            top: inherit;
+            bottom: -75px; 
+    
+            &_triangle{
+                bottom: inherit;
+                top: -4px;
+            }
         }
+
+        &.shift{
+            .callOut{
+                left: -80px; 
+        
+                &_triangle{
+                    left: 0;
+                }
+            }
+        }
+    
     }
 }
