--- a/src/styles/components/_error.scss
+++ b/src/styles/components/_error.scss
@@ -1,38 +1,46 @@
 .error{
     position: fixed;
-    width: 85%;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     text-align: center;
     background-color: rgba(159,58,56, 0.5);
     font-size: 20px;
-    color: #fff;
-    padding: 5px 0;
-    border-radius: 5px;
     border: 2px solid #5f1715;
 
+    &_inner{
+        width: 80%;
+        max-width: 1000px;
+        margin: 0 auto;
+        background-color: #191A1A;
+        color: #fff;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform:  translateY(-50%);
+        transform: translateY(-50%);
+        position: relative;
+        border-radius: 5px;
+        padding: 30px 5px;
+    }
+
     &_btn{
+        position: absolute;
+        top: 0;
+        right: 0;
         border: none;
         background: none;
         color: #fff;
-        float: right;
         font-size: 20px;
         cursor: pointer; 
     }
 }
 
-@media all and (min-width: 1030px){
+@media all and (min-width: 600px){
     .error{
-        position: absolute;
-        width: 80%;
-    }
-}
-
-@media all and (min-width: 1240px){
-    .error{
-        width: 95%;
+        &_btn{
+            top: 5px;
+            right: 5px;
+        }
     }
 }
