--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -9,5 +9,9 @@ header{
         margin: 0;
         color: #fff;
         font-size: 26px;
+
+        .red{
+            color: rgb(159,58,56);
+        }
     }
 }
