--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,6 @@
 @import './styles/components/call-out';
 @import './styles/components/error';
 @import './styles/components/header';
+@import './styles/components/accordion';
 @import './styles/components/footer';
 @import './styles/misc';
