--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -1,16 +1,11 @@
 .map{
-    margin: 50px auto 0 auto;
+    margin: 0 auto;
     position: relative;
+    cursor: pointer;
 }
 
 @media all and (max-width: 1239px){
     .map{
         overflow-x: scroll;
-    }
-}
-
-@media all and (min-width: 1100px){
-    .map{
-        margin: 100px auto 0 auto;
     }
 }
