--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -1,4 +1,5 @@
 .accordion{
+    width: 300px;
     max-width: 1024px;
     margin: 50px auto 20px auto;
 
@@ -11,6 +12,7 @@
         i{
             color: #343332;
             font-size: 26px;
+            transition: color 1s;
         }
     }
 
@@ -18,26 +20,57 @@
         height: 0;
         overflow: hidden;
         transition: all 1s;
-        padding: 0 0 0 30px;
+        
 
         &__text{
             font-size: 12px;
+            text-align: center;
         }
     }
 
     &.open{
-        .accordion_content{
-            height: 60px;
+        .accordion_toggle i{
+            color: #9f3a38;
         }
+
+        .accordion_content{
+            position: relative;
+            height: 60px;
+            border: 1px solid #eee;
+            border-radius: 5px;
+        }
+
+        .accordion_content__text{
+            width: 100%;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform:  translate(-50%, -50%);
+            -ms-transform:  translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+    }
+}
+
+@media all and (min-width: 600px){
+    .accordion{
+        width: 500px;
+    }
+}
+
+@media all and (min-width: 800px){
+    .accordion{
+        width: 600px;
     }
 }
 
 @media all and (min-width: 1100px){
     .accordion{
+        width: 100%;
         margin: 100px auto 50px auto;
 
         &_content{
-            padding: 0 0 0 50px;
 
             &__text{
                 font-size: 16px;
