--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -49,6 +49,7 @@
             -webkit-transform:  translate(-50%, -50%);
             -ms-transform:  translate(-50%, -50%);
             transform: translate(-50%, -50%);
+            color: #5f5959;
         }
     }
 }
