--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,5 @@
 @import './styles/components/header';
 @import './styles/components/accordion';
 @import './styles/components/footer';
+@import './styles/components/loader';
 @import './styles/misc';
